finalização pagSelecionarAcao.php

--- a/style.css
+++ b/style.css
@@ -3,6 +3,20 @@
     padding: 0;
 }
 
+html, body{
+    height: 100%;
+}
+
+.container-modificado{
+    width: 800px;
+}
+
 .form-select{
     border: 1px solid black !important;
+}
+
+#btn-voltar a,
+#btn-proximo a{
+    text-decoration: none !important;
+    color: white;
 }
