--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@ html, body{
     height: 100%;
 }
 
+h1{
+    font-size: 50px;
+}
+
 .container-modificado{
     width: 800px;
 }
@@ -23,4 +27,10 @@ html, body{
 
 .botoes-modificada{
     padding-bottom: 250px;
+}
+
+#btn-scroll-header{
+    position: fixed;
+    right: 20px;
+    display: none;
 }
